[gd_scene load_steps=7 format=2]

[ext_resource path="res://tres/twokoban_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://tscn/Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://tres/ui_theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/ThankYouScreen.gd" type="Script" id=4]
[ext_resource path="res://tres/level_label_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://tscn/ConfirmationDialog.tscn" type="PackedScene" id=6]

[node name="ThankYouForPlaying" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" parent="." instance=ExtResource( 2 )]

[node name="ThanksTitle" type="Label" parent="."]
margin_left = 56.0
margin_right = 201.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Thanks for Playing!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThanksText" type="RichTextLabel" parent="."]
margin_top = 16.0
margin_right = 256.0
margin_bottom = 120.0
focus_mode = 2
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
text = "I have never published a game to the public, ever, so thank you so much for playing this. Overall, I'm proud of what I did as a beginner, except for a bug that I needed to fix (when two sprites are occasionally overlapped each other and can't move) and some things I wish I added (like accessible options to toggle the music and sound effects, and a more elaborate pause screen). Nonetheless, I sure hope this inspires me to make more games in the future.

Thanks again! :-)"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 120.0
margin_right = 104.0
margin_bottom = 144.0
theme = ExtResource( 3 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LSButton" type="Button" parent="."]
margin_left = 152.0
margin_top = 120.0
margin_right = 248.0
margin_bottom = 144.0
theme = ExtResource( 3 )
text = "LEVEL SELECT"

[node name="ConfirmationDialog" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="LSButton" to="." method="_on_LSButton_pressed"]
